202002xx
- Added Web radio support
- Local timezone is set automatically
- Logging doesn't write the SD card anymore (logging to RAM)
- Support for rotary controls connected to GPIO
- Spotify update
- Bluetooth update
- Watchdog can monitor network connectivity and reboot system
  if connectivity is lost (not in UI)

20200127
- Filter designer DSP-enabled boards
- Daisy-chain Beocreate boards for stereo-setups with 3-4 channels per speaker (experimental)
- DSP settings can be stored in DSP for use without the Raspberry Pi
- new alsaloop backend that can be started/stopped from the UI
- Improved external metadata download (improved performance, added fanart.tv)
- added HiFiBerry HAT EEPROM tools to allow re-flashing HATs
- Updated kernel to support new hardware and fix DAC+ ADC Pro bug
- Several other bugfixes and improvements

20191220
- allow activating another source from the "Now Playing" screen
- added Snapcast source (experimental)
- added privacy controls in UI
- new UI option to set name for sources
- AAC audio support for Bluetooth
- SSH enabledby default
- new mechanism to pause other players when a new player wants to start playback
- AAC audio codec for Bluetooth
- LG SoundSync support for DSP boards with a profile that can detect SPDIF activity
- SSH server disabled by default
- Direct to hardware: players will use native sample rate without resampling
- Watchdog will reboot the system if it becomes unresponsive
- Several other bugfixes and stability improvements

20191124
- Improved 192kHz resampling
- Added Last.FM settings in UI
- Added updater in UI
- Added debug data collector
- Added UI for SSH configuration
- Allow to set static IP address
- Improve covers using Musicbrainz and coverartarchive
- Scrobble listening history to local database
- Support more B&O speaker models with Beocreate board
- Added command-line measurement tools (not yet available in UI)
- Exclusive audio mode if only one player is activated