@@ -7,9 +7,6 @@ loop_delay=1
 # Ignore spotify until the MPRIS bug is fixed
 #ignore=spotifyd
 
-[metadata]
-logger-console=yes
-
 [webserver]
 enable=yes
 port=81
@@ -29,17 +26,11 @@ ShairportSync=shairport-sync
 [volume]
 mixer_control=Master
 
-[plugins]
-plugin_dir=/data/ac2plugins
-#metadata=ac2.plugins.metadata.console.MetadataConsole
-
 [metadata_post]
 url=http://127.0.0.1:80/sources/metadata
 
 [volume_post]
 url=http://127.0.0.1:80/sound/volume
-
-[postgres]
 
 [privacy]
 external_metadata=1
@@ -51,3 +42,8 @@ clk = 4
 dt = 17
 sw = 27
 step = 5
+
+[metadata:ac2.plugins.metadata.postgresql.MetadataPostgres]
+
+[metadata:ac2.plugins.metadata.lametric.LaMetricPush]
+
